--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tiktok-clone",
+  "homepage": "https://gabrielcarneiro098.github.io/tiktok-clone/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
