--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiktok-clone",
-  "homepage": "https://gabrielcarneiro098.github.io/tiktok-clone/",
+  "homepage": "tiktok-clone/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
